# Templated_lists

./: CMakeLists.txt  README.md  main.cpp  tests.hpp
include/: IList.hpp  array_list.hpp  linked_list.hpp  node.hpp  tests.hpp
src/: CMakeLists.txt  array_list.cpp  google_tests.cpp  linked_list.cpp  main.cpp
